react_webviews/src/kyc/Style.scss
/* ... */
///////////// BANK DETAILS END //////////////

#kyc-upload-intro {
  .banner {
    display: flex;
    justify-content: center;
    margin: 20px 0 10px 0;
    img {
      display: block;
      margin: 0 auto;
    }
  }

  .intro {
    margin: 0 auto;
    text-align: center;
    font-size: 14px;
    color: #160d2e;
  }

  .trust {
    margin-top: 90px;
    img {
      display: block;
      margin: 0 auto;
    }
  }
}

#kyc-upload-progress {
  .header {
    font-size: 20px;
    color: #160d2e;
    font-weight: 600;
  }
  .kyc-upload-card {
    border: 1px solid beige;
    padding: 10px 0 10px 0;
    border-radius: 10px;
    display: flex;
    align-items: center;
    cursor: pointer;
    margin: 10px 0 10px 0;
    line-height: 1.5;

    .image {
      position: relative;

      .check-icon {
        position: absolute;
        width: 12px;
        left: 49px;
        top: 9px;
      }
    }

    .title {
      margin-left: 10px;
    }

    .subtitle {
      color: #8d879b;
      font-size: 13px;
      margin-left: 10px;
    }
  }
}

/////////////////// KYC DIALOG END ///////////////

.page-body-kyc {
  .title {
    font-size: 20px;
    color: #160d2e;
    font-weight: 600;
    padding: 0;
  }
  .subtitle {
    font-size: 13px;
    color: #8d879b;
    padding: 0 15px 0 0;
    margin-bottom: 20px;
  }

  .pageno {
    color: #767e86;
  }

  .doc-container {
    border: 1px dotted;
  }
}

#kyc-upload-pan,
#kyc-upload-address,
#kyc-upload-ipv-video,
#kyc-upload-sign,
#kyc-upload-identification .page-body-kyc {
  font-size: 14px;
  .alert-status-info {
    margin-top: 20px;
  }

  .sub-title {
    margin-top: -18px;
    font-size: 13px;
  }

  .pan-alert {
    width: 100%;
    margin-top: 2px;
    line-height: 1.5;
  }

  .pan-alert .row {
    display: flex;
    flex-wrap: nowrap;
  }

  .ipv_footer_instructions {
    margin-top: 10px;
    line-height: 1.5;
  }

  .ipv_code {
    font-weight: bold;
    font-size: 26px;
    line-height: 31px;
    letter-spacing: 7.5px;
    color: #331c6b;
    margin-top: 10px;
  }

  .flex-between-center {
    margin-top: 14px;

    .know_more {
      font-size: 14px;
      color: #160d2e;
    }

    .link {
      color: var(--secondary);
      font-size: 10px;
      margin: 5px 0 0;
      cursor: pointer;
    }
  }
}

#kyc-upload-address {
  padding-bottom: 30px;

  .sub-title {
    display: flex;
    justify-content: space-between;
    column-gap: 10px;

    .edit {
      color: var(--secondary);
      font-size: 12px;
      font-weight: 800;
    }
  }
}

.kyc-doc-upload-container {
  margin-top: 20px;
  border: 1px dashed var(--skelton-color);
  padding: 10px;
}

.kyc-doc-upload-container.noBorder {
  border: none;
}

.kyc-doc-upload-container .caption {
  text-align: center;
}

.kyc-doc-upload-container .preview {
  display: block;
  width: 100%;
  object-fit: contain;
}

.kyc-upload-doc-actions {
  margin-top: 20px;
  .kyc-upload {
    display: none;
  }
  .kyc-upload-button {
    display: block;
    margin: 0 auto;
    margin-top: 10px;
    background-color: transparent;
    padding: 0;
    border: none;
    cursor: pointer;

    svg {
      fill: var(--secondary);
    }
  }

  .mobile-actions {
    display: flex;
    align-items: center;

    .open-camera {
      border-right: 1px solid #e1e1e1;
      flex: 1 1 50%;
    }

    .open-gallery {
      flex: 1 1 50%;
    }
  }

  .upload-action {
    text-transform: uppercase;
    color: var(--secondary);
    font-size: 10px;
    font-weight: 800;
  }
}
.kyc-penny-dialog {
  .penny-dialog-content {
    padding: 15px;

    .img {
      width: 100%;
      border-radius: 4px;
    }

    .title {
      display: flex;
      justify-content: space-between;
      align-items: center;
      column-gap: 10px;
      margin: 20px 0;
      color: #160d2e;
      font-size: 20px;
      font-weight: 600;
      line-height: 1.1;

      span {
        font-size: 13px;
        color: #3792fc;
      }
    }

    .subtitle {
      color: #767e86;
      font-size: 14px;
      margin-bottom: 10px;
    }
  }
}

.kyc-penny-failed-dialog {
  .penny-failed-dialog-content {
    padding: 15px 15px 30px 15px !important;

    .title {
      margin: -15px -15px 0 0;
      display: flex;
      justify-content: space-between;
      align-items: center;
      column-gap: 10px;
      color: #160d2e;
      font-size: 20px;
      font-weight: 600;
      padding-bottom: 10px;

      .text {
        margin: 30px 0 0px 0;
      }
    }

    .subtitle {
      color: #767e86;
      font-size: 14px;
      margin: 10px 0 20px 0;
      line-height: 1.5;
    }

    .divider {
      font-size: 8px;
      width: 100%;
      text-align: center;
      border-bottom: 1px solid #ececec;
      line-height: 0.1em;
      color: #767e86;
      margin: 20px 0;

      span {
        background: #fff;
        padding: 0 10px;
      }
    }

    .button {
      width: 100%;
      padding: 5px 15px;
      font-size: 14px;
      border-radius: 5px;
      min-height: 47px;
      font-weight: bold;
      letter-spacing: 0.01em;
    }

    .bg-full {
      color: white;
      background-color: var(--secondary);
    }

    .bottom-margin {
      margin-bottom: 30px;
    }

    .border-button {
      color: var(--secondary);
      background-color: white;
      border: 1px solid var(--secondary);
    }

    .highlight-bg {
      color: var(--secondary);
      background-color: rgb(250, 250, 250);
    }
  }
}
/* ... */

